<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="118dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/film_poster"
        android:layout_width="110dp"
        android:layout_height="155dp"
        android:scaleType="center"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_films"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/photo"
        >
    </com.google.android.material.imageview.ShapeableImageView>
    <ImageView
        android:id="@+id/blue_shadow"
        android:layout_width="110dp"
        android:layout_height="155dp"
        android:scaleType="center"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/photo"
        android:visibility="gone"
        >
    </ImageView>

    <TextView
        android:id="@+id/film_name"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        style="@style/RegularTextStyle"
        android:text="@string/film_name"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintTop_toBottomOf="@id/film_poster"
        app:layout_constraintStart_toStartOf="parent"

        />
    <TextView
        android:id="@+id/film_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        style="@style/GreyRegularText"
        android:text="@string/film_genre"
        app:layout_constraintTop_toBottomOf="@id/film_name"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/film_rating"
        android:layout_width="17dp"
        android:layout_height="9dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:textSize="6sp"
        android:text="@string/rate"
        android:textColor="#FFFFFF"
        android:background="@drawable/rate_button_blue"
        app:layout_constraintTop_toTopOf="@+id/film_poster"
        app:layout_constraintEnd_toEndOf="@+id/film_poster"/>
</androidx.constraintlayout.widget.ConstraintLayout>