<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.skillcinema.ui.support.ViewGroupHeaderOnly
        android:id="@+id/layout_with_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/GreyRegularText"
        android:layout_marginTop="18dp"
        android:layout_marginStart="26dp"
        android:text="@string/show"
        app:layout_constraintTop_toBottomOf="@+id/layout_with_header"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_left_show"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="26dp"
        android:text="@string/all"
        android:textAllCaps="false"
        style="@style/ButtonBlackText"

        android:background="@drawable/selector_button_left_rounding_in_settings"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintTop_toBottomOf="@+id/text_show"
        app:layout_constraintEnd_toStartOf="@+id/button_center_show"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_center_show"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        style="@style/ButtonBlackText"

        android:text="@string/films"
        android:textAllCaps="false"
        android:background="@drawable/selector_button_without_rounding_in_settings"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintTop_toBottomOf="@+id/text_show"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_right_show"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        style="@style/ButtonBlackText"

        android:text="@string/serials"
        android:textAllCaps="false"
        android:background="@drawable/selector_button_right_rounding_in_settings"
        app:layout_constraintTop_toBottomOf="@+id/text_show"
        app:layout_constraintStart_toEndOf="@id/button_center_show"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/RegularTextStyle"
        android:layout_marginTop="26dp"
        android:layout_marginStart="26dp"
        android:maxWidth="130dp"
        android:text="@string/country"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/button_center_show"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/chosen_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/GreyRegularText"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="26dp"
        android:maxWidth="130dp"
        android:textSize="14sp"
        android:hint="..."
        app:layout_constraintTop_toBottomOf="@id/button_center_show"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/country_Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintBottom_toTopOf="@id/separator_country"
        app:layout_constraintEnd_toEndOf="parent"/>
    <View
        android:id="@+id/separator_country"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/blue_100"
        app:layout_constraintTop_toBottomOf="@+id/title_country"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/RegularTextStyle"
        android:layout_marginTop="26dp"
        android:layout_marginStart="26dp"
        android:maxWidth="130dp"
        android:text="@string/genre"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/separator_country"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/chosen_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/GreyRegularText"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="26dp"
        android:maxWidth="130dp"
        android:textSize="14sp"
        android:hint="..."
        app:layout_constraintTop_toBottomOf="@id/separator_country"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/genre_Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintBottom_toTopOf="@id/separator_genre"
        app:layout_constraintEnd_toEndOf="parent"/>
    <View
        android:id="@+id/separator_genre"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/blue_100"
        app:layout_constraintTop_toBottomOf="@+id/title_genre"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/RegularTextStyle"
        android:layout_marginTop="26dp"
        android:layout_marginStart="26dp"
        android:maxWidth="130dp"
        android:text="@string/word_year"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/separator_genre"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/chosen_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/GreyRegularText"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="26dp"
        android:maxWidth="130dp"
        android:textSize="14sp"
        android:hint="@string/any_years"
        app:layout_constraintTop_toBottomOf="@id/separator_genre"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/year_Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintBottom_toTopOf="@id/separator_year"
        app:layout_constraintEnd_toEndOf="parent"/>
    <View
        android:id="@+id/separator_year"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/blue_100"
        app:layout_constraintTop_toBottomOf="@+id/title_year"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/RegularTextStyle"
        android:layout_marginTop="26dp"
        android:layout_marginStart="26dp"
        android:maxWidth="130dp"
        android:text="@string/rating"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/separator_year"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/chosen_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/GreyRegularText"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="26dp"
        android:maxWidth="130dp"
        android:textSize="14sp"
        android:text="@string/any_rating"
        app:layout_constraintTop_toBottomOf="@id/separator_year"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/discrete_slider"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:stepSize="1"
        app:values="@array/initial_range_slider_values"

        android:valueFrom="1"
        android:valueTo="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_rating" />

    <View
        android:id="@+id/separator_rating"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/blue_100"
        app:layout_constraintTop_toBottomOf="@+id/discrete_slider"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/GreyRegularText"
        android:layout_marginTop="18dp"
        android:layout_marginStart="26dp"
        android:text="@string/sort"
        app:layout_constraintTop_toBottomOf="@+id/separator_rating"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_left_sort"
        style="@style/ButtonBlackText"
        android:layout_width="85dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/selector_button_left_rounding_in_settings"

        android:text="@string/word_date"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/button_center_sort"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/text_sort" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_center_sort"
        android:layout_width="155dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        style="@style/ButtonBlackText"
        android:background="@drawable/selector_button_without_rounding_in_settings"
        android:text="@string/word_popular"

        android:textAllCaps="false"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_sort" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_right_sort"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        style="@style/ButtonBlackText"
        android:text="@string/rating"
        android:textAllCaps="false"
        android:background="@drawable/selector_button_right_rounding_in_settings"
        app:layout_constraintTop_toBottomOf="@+id/text_sort"
        app:layout_constraintStart_toEndOf="@id/button_center_sort"
        />
    <View
        android:id="@+id/separator_sort"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/blue_100"
        app:layout_constraintTop_toBottomOf="@+id/button_center_sort"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:id="@+id/icon_hide_watched"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_not_eye_black"
       app:layout_constraintEnd_toStartOf="@id/word_hide_watched"
        app:layout_constraintTop_toBottomOf="@id/separator_sort"
        android:visibility="gone"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/word_hide_watched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/RegularTextStyle"
        android:text="@string/hide_watched"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/separator_sort"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        />
    <ImageView
        android:id="@+id/icon_show_watched"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_eye_black"
        app:layout_constraintEnd_toStartOf="@id/word_show_watched"
        app:layout_constraintTop_toBottomOf="@id/separator_sort"

        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/word_show_watched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/RegularTextStyle"
        android:text="@string/show_watched"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/separator_sort"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_make_choice"
        style="@style/WhiteRegularTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/button_for_job_blue"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/apply"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_center_sort" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@id/button_make_choice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
</ScrollView>