<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/rate_button_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
    </ImageView>
    <ImageView
        android:id="@+id/white_square"
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/rate_button_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
    </ImageView>
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button_heart"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/add_to_favorite"
        android:src="@drawable/ic_heart_black"
        app:layout_constraintEnd_toEndOf="@+id/white_square"
        app:layout_constraintStart_toStartOf="@+id/white_square"
        app:layout_constraintTop_toTopOf="@+id/white_square"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_name_folder"
        style="@style/RegularTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:maxWidth="120dp"

        android:text="@string/favorite"
        app:layout_constraintEnd_toEndOf="@+id/white_square"
        app:layout_constraintStart_toStartOf="@+id/white_square"
        app:layout_constraintTop_toBottomOf="@+id/button_heart"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/film_count"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:textSize="9sp"
        android:text="@string/rate"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_for_job_blue"
        app:layout_constraintEnd_toEndOf="@+id/white_square"
        app:layout_constraintStart_toStartOf="@+id/white_square"
        app:layout_constraintTop_toBottomOf="@+id/text_name_folder"
        />
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button_close"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/close"
        android:rotation="45"
        android:visibility="invisible"
        android:src="@drawable/ic_plus"
        app:layout_constraintEnd_toEndOf="@+id/white_square"
        app:layout_constraintTop_toTopOf="@+id/white_square"
        />
</androidx.constraintlayout.widget.ConstraintLayout>